--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ env:
     #- http_proxy="http://example.com"
     - bintray_url="https://dl.bintray.com/beast-team"
   matrix:
+    - XFROM="debian:jessie" XUP="jessie"
     - XFROM="ubuntu:wily"   XUP="wily"
 
 before_install:
