TRAVIS: add ubuntu trusty and xenial to the build matrix
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ env:
     - bintray_url="https://dl.bintray.com/beast-team"
   matrix:
     - XFROM="debian:jessie" XUP="jessie"
+    - XFROM="ubuntu:trusty" XUP="trusty"
     - XFROM="ubuntu:wily"   XUP="wily"
+    - XFROM="ubuntu:xenial" XUP="xenial"
 
 before_install:
   - uname -a
