TRAVIS: allow ubuntu:trusty builds to fail
Trusy provides g++-4.8.4 which fails to compile some of our C++11 templates,
so for now we allow these builds to fail.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ dist: trusty
 sudo: required
 services: docker
 language: c
-matrix:
-  fast_finish: true
 
 env:
   global:
@@ -20,6 +18,10 @@ env:
     - XFROM="ubuntu:trusty" XUP="trusty"
     - XFROM="ubuntu:wily"   XUP="wily"
     - XFROM="ubuntu:xenial" XUP="xenial"
+matrix:
+  fast_finish: true
+  allow_failures:
+    - env: XFROM="ubuntu:trusty" XUP="trusty"
 
 before_install:
   - uname -a
