--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
     - bintray_url="https://dl.bintray.com/beast-team"
   matrix:
     - XFROM="debian:jessie" XUP="jessie"
+    - XFROM="debian:testing" XUP="testing"
     - XFROM="ubuntu:trusty" XUP="trusty"
     - XFROM="ubuntu:wily"   XUP="wily"
     - XFROM="ubuntu:xenial" XUP="xenial"
