TRAVIS: allow failure for ubuntu xenial builds
Ubuntu Xenial seems to be a bit unstable still and we depend on successful
Rapicorn Xenial package builds.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - env: XFROM="ubuntu:trusty" XUP="trusty"
+    - env: XFROM="ubuntu:xenial" XUP="xenial"
 
 before_install:
   - uname -a
