--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,17 @@ env:
     #- http_proxy="http://example.com"
     - bintray_url="https://dl.bintray.com/beast-team"
   matrix:
-    - XFROM="debian:jessie" XUP="jessie"
+    - XFROM="debian:jessie"  XUP="jessie"
     - XFROM="debian:testing" XUP="testing"
-    - XFROM="ubuntu:trusty" XUP="trusty"
-    - XFROM="ubuntu:wily"   XUP="wily"
-    - XFROM="ubuntu:xenial" XUP="xenial"
+    - XFROM="ubuntu:trusty"  XUP="trusty"
+    - XFROM="ubuntu:wily"    XUP="wily"
+    - XFROM="ubuntu:xenial"  XUP="xenial"
 matrix:
   fast_finish: true
   allow_failures:
-    - env: XFROM="ubuntu:trusty" XUP="trusty"
-    - env: XFROM="ubuntu:xenial" XUP="xenial"
+    - env: XFROM="debian:testing" XUP="testing"
+    - env: XFROM="ubuntu:trusty"  XUP="trusty"
+    - env: XFROM="ubuntu:xenial"  XUP="xenial"
 
 before_install:
   - uname -a
