PO: distcheck: ensure 'update-po' has been run to ship updated .po files
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -48,11 +48,13 @@ installcheck-local: bse-app-test
 
 
 # == distcheck-checks ==
-DISTCHECK_HOOK = distcheck # help add dependencies to 'distcheck' without overriding its definition
-$(DISTCHECK_HOOK): distcheck-check-xz-opt
 distcheck-check-xz-opt:
 	$(Q) test "$$XZ_OPT" != '--fast' -a "$$XZ_OPT" != '-0' || \
 	{ echo "distcheck: error: bad compression option for distribution tarball: XZ_OPT=$$XZ_OPT" >&2 ; exit 1 ; }
+check-update-po:
+	$(Q) $(MAKE) -C po check-update-po
+DISTCHECK_HOOK = distcheck # help add dependencies to 'distcheck' without overriding its definition
+$(DISTCHECK_HOOK): distcheck-check-xz-opt check-update-po
 
 # == Dist Fixes ==
 # Some files remain after distcheck, that we cannot clean up. So we role our own listfiles filter.
