--- a/.travis.yml
+++ b/.travis.yml
@@ -14,18 +14,18 @@ env:
     #- http_proxy="http://example.com"
     - INTENT="deb" # default intent
   matrix:
-    # distcheck: succeed in 'make distcheck'
-    - INTENT="distcheck" DIST="ubuntu:wily"
     # deb: build packages for distribution $DIST
     - DIST="ubuntu:wily"
     - DIST="debian:jessie"
     - DIST="debian:testing"
     - DIST="ubuntu:xenial"
-    #- DIST="ubuntu:trusty" # C++11 support too old
+    # distcheck: succeed in 'make distcheck'
+    - INTENT="distcheck" DIST="ubuntu:wily"
 matrix:
   allow_failures:
     - env: DIST="debian:testing"
     - env: DIST="ubuntu:xenial"
+    - env: INTENT="distcheck" DIST="ubuntu:wily"
   fast_finish: true
 
 before_install:
