--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Package: beast
 Architecture: any
 Depends:
  libbse-0-10 (= ${binary:Version}), beast-doc (= ${source:Version}),
- rapicorn (>= 16.0.0), python-rapicorn (>= 16.0.0),
+ rapicorn, python-rapicorn,
  ${shlibs:Depends}, ${misc:Depends}
 Description: Music Synthesizer and Composer
  Beast is a free software music composer and modular synthesizer.
@@ -41,7 +41,7 @@ Package: libbse-0-10
 Section: libs
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
-Depends: librapicorn-16-0, ${shlibs:Depends}, ${misc:Depends}
+Depends: librapicorn-16-0 (>= 16.0.1~git5374), ${shlibs:Depends}, ${misc:Depends}
 Breaks: beast (<< 0.7.4)
 Replaces: beast (<< 0.7.4)
 Description: Music Synthesizer and Composer
@@ -52,7 +52,7 @@ Description: Music Synthesizer and Composer
 Package: libbse-dev
 Section: libdevel
 Architecture: any
-Depends: libbse-0-10 (= ${binary:Version}), librapicorn-dev (>= 16.0.0), ${shlibs:Depends}, ${misc:Depends}
+Depends: libbse-0-10 (= ${binary:Version}), librapicorn-dev, ${shlibs:Depends}, ${misc:Depends}
 Breaks: libbse-0.7-4, bse-alsa (<< 0.9.3)
 Replaces: libbse-0.7-4, bse-alsa (<< 0.9.3)
 Description: Music Synthesizer and Composer
