BSE: move Category and CategorySeq into bseapi.idl and switch to Icon
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -115,7 +115,7 @@ idl_dummy_files = $(strip	\
 )
 # BSE procedure sources
 bse_proc_sources = $(strip \
-	bsecategories.proc	bseeditablesample.proc	\
+	bseeditablesample.proc	\
 	bsejanitor.proc								bseproject.proc		\
 				bsesong.proc					bsesource.proc		\
 				bseitem.proc					bsewaveosc.proc		\
