BSE: SF2: move sound-font-snet from zintern to res; fixes sf2 playback
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/bse/res/Makefile.am
+++ b/bse/res/Makefile.am
@@ -11,6 +11,7 @@ RESOURCES = $(strip 		\
 	adsr-wave-2.bse		\
 	plain-wave-1.bse	\
 	plain-wave-2.bse	\
+        sound-font-snet.bse     \
 )
 
 gen_sources = xgen-bzc xgen-bzh
