BSE: add missing libs
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -357,7 +357,7 @@ bseprocidl_LDADD   = $(progs_LDADD)
 # == bsetool ==
 noinst_PROGRAMS += bsetool
 bsetool_SOURCES  = bsetool.cc
-bsetool_LDADD    = libbse-@MAJOR@.la $(RAPICORN_LIBS)
+bsetool_LDADD    = libbse-@MAJOR@.la $(BSE_LIBS) $(RAPICORN_LIBS)
 
 # == Tests ==
 EXTRA_DIST += oldidl.idl
