MISC: Dockerfile-apt.in: leave the build files around for inspection
The 'make clean' rule is tested as part of 'distcheck'. For docker builds
it's more convenient to leave all generated files in place for manual
inspection.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-apt.in
+++ b/misc/Dockerfile-apt.in
@@ -76,8 +76,7 @@ RUN nice make uninstall
 RUN `intent distcheck` && \
     nice make distcheck
 
-# Cleanup, show tarball
-RUN nice make clean
+# Show tarball
 RUN ls -l *.tar.xz
 
 # Create deb packages as follows:
